--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,15 @@
 buildscript {
     repositories {
         jcenter()
+
+        maven {
+            url  "http://xavierbauquet.bintray.com/android"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.0'
+
+        classpath 'com.xavierbauquet.theo:theo-plugin:1.1.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
