ADD Wear in the project

--- a/podorunwear/build.gradle
+++ b/podorunwear/build.gradle
@@ -1,16 +1,17 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.xavierbauquet.theo'
 
+
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.2"
+
     defaultConfig {
-        applicationId "com.ericseychal.podorun"
-        minSdkVersion 18
+        applicationId "com.ericseychal.podorunwear"
+        minSdkVersion 21
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -22,13 +23,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.google.android.support:wearable:2.0.0-alpha2'
+    compile 'com.google.android.gms:play-services-wearable:9.6.0'
     compile 'com.github.lukedeighton:wheelview:0.3.1'
     compile 'com.android.support:design:24.2.1'
-    testCompile 'junit:junit:4.12'
     compile 'com.xavierbauquet.locationdroid:locationdroid:1.0.0'
     compile project(path: ':podorunlibrary')
 }
