--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,7 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     testCompile 'junit:junit:4.12'
     compile 'com.xavierbauquet.locationdroid:locationdroid:1.0.0'
-    compile project(path: ':podorunlibrary')
+    compile('com.ericseychal.podorun:podorunlibrary:1.0.0')
+    compile('com.google.android.gms:play-services-base:10.0.1')
+    compile ('com.google.android.gms:play-services-wearable:10.0.1')
 }
