--- a/podorunwear/build.gradle
+++ b/podorunwear/build.gradle
@@ -28,5 +28,5 @@ dependencies {
     compile 'com.github.lukedeighton:wheelview:0.3.1'
     compile 'com.android.support:design:24.2.1'
     compile 'com.xavierbauquet.locationdroid:locationdroid:1.0.0'
-    compile project(path: ':podorunlibrary')
+    compile('com.ericseychal.podorun:podorunlibrary:1.0.0')
 }
